Add regional pages (Amériques, Asie, Europe, Moyen-Orient) and restructure index with cards

--- a/index.html
+++ b/index.html
@@ -9,33 +9,40 @@
 <body>
   <header>
     <h1>Géopolitique</h1>
+    <!-- Navigation vers les différentes pages du site -->
     <nav>
-      <a href="#introduction">Introduction</a>
-      <a href="#acteurs">Acteurs clés</a>
-      <a href="#enjeux">Enjeux contemporains</a>
+      <a href="index.html">Accueil</a>
+      <a href="afrique.html">Afrique</a>
+      <a href="ameriques.html">Amériques</a>
+      <a href="asie.html">Asie</a>
+      <a href="europe.html">Europe</a>
+      <a href="moyen-orient.html">Moyen‑Orient</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <main>
+    <!-- Section introductive expliquant la géopolitique -->
     <section id="introduction">
-      <h2>Introduction à la géopolitique</h2>
+      <h2>Qu’est‑ce que la géopolitique ?</h2>
       <p>
-        La géopolitique étudie comment la géographie influence les relations internationales et les rapports de force entre États et acteurs non étatiques. Ses analyses permettent de comprendre pourquoi certaines régions sont stratégiques, comment les intérêts se confrontent et quels facteurs façonnent les alliances et les conflits.
+        La géopolitique analyse la façon dont l’espace, les ressources et les acteurs (États, organisations, entreprises, mouvements) influencent les relations internationales et les rapports de force. Comprendre ces dynamiques aide à expliquer pourquoi certaines régions sont stratégiques et comment se nouent les alliances et les conflits.
       </p>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/World_map_-_low_resolution.svg/1280px-World_map_-_low_resolution.svg.png" alt="Carte du monde (CC BY‑SA 3.0)">
     </section>
 
+    <!-- Section présentant les principaux acteurs de la scène internationale -->
     <section id="acteurs">
       <h2>Acteurs clés</h2>
       <ul>
         <li>Les États souverains</li>
-        <li>Les organisations internationales (ONU, OMC, OTAN, etc.)</li>
+        <li>Les organisations internationales (ONU, OMC, OTAN…)</li>
         <li>Les entreprises multinationales</li>
-        <li>Les ONG et mouvements sociaux</li>
+        <li>Les ONG et les mouvements sociaux</li>
       </ul>
     </section>
 
+    <!-- Section listant les grands enjeux mondiaux -->
     <section id="enjeux">
       <h2>Enjeux contemporains</h2>
       <p>Parmi les sujets d’actualité :</p>
@@ -46,6 +53,33 @@
         <li>Migrations et démographie</li>
         <li>Multipolarité et rivalités géopolitiques</li>
       </ul>
+    </section>
+
+    <!-- Section présentant les différentes régions avec des cartes d’accès -->
+    <section id="regions">
+      <h2>Explorer par région</h2>
+      <div class="card-container">
+        <a class="card" href="afrique.html">
+          <h3>Afrique</h3>
+          <p>Croissance économique, démocratisation et sécurité au Sahel.</p>
+        </a>
+        <a class="card" href="ameriques.html">
+          <h3>Amériques</h3>
+          <p>Commerce, climat, criminalité et défis démographiques.</p>
+        </a>
+        <a class="card" href="asie.html">
+          <h3>Asie</h3>
+          <p>Dynamisme économique, nouveaux corridors et incertitudes géopolitiques.</p>
+        </a>
+        <a class="card" href="europe.html">
+          <h3>Europe</h3>
+          <p>Cohésion fragilisée, guerre en Ukraine et relations transatlantiques.</p>
+        </a>
+        <a class="card" href="moyen-orient.html">
+          <h3>Moyen‑Orient</h3>
+          <p>Modernisation du Golfe, rivalités et influences externes.</p>
+        </a>
+      </div>
     </section>
   </main>
 
