Mise à jour de amerique.html : ajout d'images et article détaillé

--- a/ameriques.html
+++ b/ameriques.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Amériques – Géopolitique 2025</title>
+  <title>Amériques – Géopolitique 2025</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,23 +19,89 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
+
   <main>
-    <section>
-      <h2>Enjeux géopolitiques dans les Amériques (2025)</h2>
+    <!-- Image de bannière pour les Amériques -->
+    <section class="hero" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Latin_America_-_First_level_political_divisions.svg/960px-Latin_America_-_First_level_political_divisions.svg.png');">
+      <h2>Les Amériques en 2025 : défis et transformations</h2>
+    </section>
+
+    <section class="article">
+      <!-- Illustration supplémentaire pour les Amériques -->
+      <figure>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Panama_canal_panoramic.jpg/1280px-Panama_canal_panoramic.jpg" alt="Vue panoramique du canal de Panama et du pont des Amériques">
+        <figcaption>Canal de Panama depuis le monument chinois – Wikimedia Commons (CC BY‑SA 4.0)【285895241962800†L169-L189】</figcaption>
+      </figure>
+      <h3>Perspectives politiques et commerciales</h3>
       <p>
-        Dans l’hémisphère occidental, plusieurs tendances stratégiques façonnent l’avenir de la région. Ces enjeux touchent autant le commerce et la politique intérieure que l’environnement et la démographie.
+        L’horizon politique du continent est marqué par le retour de Donald Trump
+        à la Maison‑Blanche. Sa politique protectionniste et ses positions
+        anti‑immigration promettent de raviver les tensions avec les voisins du
+        Sud. Les accords de libre‑échange conclus ces dernières années pourraient
+        être remis en question, créant de l’incertitude pour les exportateurs et
+        les travailleurs migrants【271091484423489†L141-L154】. Les négociations
+        commerciales avec l’Union européenne et l’Asie pourraient, elles,
+        s’intensifier en réponse à ces restrictions.
       </p>
-      <ul>
-        <li><strong>Influence des États‑Unis</strong> : le retour de Donald Trump sur la scène politique américaine pourrait raviver les tensions commerciales et migratoires dans toute l’Amérique latine【880092076806830†L142-L152】.</li>
-        <li><strong>Climat et infrastructure</strong> : le changement climatique perturbe les récoltes et les routes maritimes (canal de Panama, détroit de Magellan) et pèse sur des élections comme en Équateur【880092076806830†L142-L152】.</li>
-        <li><strong>Criminalité et gouvernance</strong> : le crime organisé évolue et s’infiltre davantage dans l’économie formelle et la politique, minant la stabilité institutionnelle【880092076806830†L142-L152】.</li>
-        <li><strong>Démographie et économie</strong> : la chute des taux de natalité met à l’épreuve les régimes de retraite et la croissance, tandis que l’inflation recule progressivement à l’échelle régionale【880092076806830†L142-L152】.</li>
-      </ul>
-      <p>Ces facteurs soulignent la complexité d’un continent où se croisent ambitions nationales, crises économiques et pressions climatiques. L’adaptation au changement et la coopération régionale seront essentielles pour préserver la stabilité.</p>
+
+      <h3>Climat et routes maritimes</h3>
+      <p>
+        Les effets du changement climatique se font sentir partout sur le
+        continent. En Équateur, des phénomènes météorologiques extrêmes
+        perturbent les élections et les campagnes politiques. Le réchauffement
+        assèche le canal de Panama et contraint à détourner une partie du trafic
+        par le détroit de Magellan, ce qui ralentit les chaînes
+        d’approvisionnement et renchérit les coûts de transport【271091484423489†L141-L154】.
+        Les récoltes en Argentine et au Brésil sont également menacées par des
+        sécheresses sévères, ce qui pourrait affaiblir la sécurité
+        alimentaire régionale.
+      </p>
+
+      <h3>Criminalité et démographie</h3>
+      <p>
+        Les organisations criminelles latino‑américaines évoluent rapidement en
+        diversifiant leurs revenus et en s’immisçant dans la vie politique. Cette
+        mutation complique la lutte contre la corruption et la violence
+        organisée【271091484423489†L148-L153】. En parallèle, la chute des taux de
+        natalité met les systèmes de retraite sous pression et annonce une
+        pénurie de main‑d’œuvre dans plusieurs pays, menaçant leur potentiel de
+        croissance à long terme.
+      </p>
+
+      <h3>Économie et réformes</h3>
+      <p>
+        Après une période de forte inflation, la région connaît une accalmie : la
+        hausse des prix ralentit, le chômage recule et la pauvreté diminue
+        progressivement【271091484423489†L155-L165】. En Argentine, le président
+        Javier Milei mène des réformes économiques radicales visant à stabiliser
+        la monnaie et à relancer l’investissement. Si elles réussissent, elles
+        pourraient servir de modèle à d’autres pays. Globalement, les
+        prévisions tablent sur une croissance du PIB régional d’environ 2,5 %, un
+        rythme modeste mais supérieur aux années précédentes【271091484423489†L155-L165】.
+      </p>
+
+      <p>
+        Les Amériques devront concilier ces défis multiples. Les gouvernements
+        seront amenés à renforcer leurs institutions, à promouvoir l’intégration
+        régionale et à diversifier leurs économies pour réduire les vulnérabilités
+        climatiques et commerciales.
+      </p>
+
+      <p class="source">
+        Image : Carte politique de l’Amérique latine – Wikimedia Commons,
+        CC BY‑SA 3.0
+      </p>
+      <p class="source">
+        Sources : [1] Americas Quarterly – « Four Trends That Will Define Latin
+        America in 2025 »【271091484423489†L141-L154】【271091484423489†L148-L153】;
+        [2] Americas Quarterly – « Four Trends That Will Define Latin America in
+        2025 »【271091484423489†L155-L165】.
+      </p>
     </section>
   </main>
+
   <footer id="contact">
-    <p>Site créé par Amadou Touré.</p>
+    <p>Site créé par Amadou Touré.</p>
     <p>Contact : <a href="mailto:example@example.com">example@example.com</a></p>
   </footer>
 </body>
