Mise à jour de asie.html : ajout d'images et article détaillé

--- a/asie.html
+++ b/asie.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Asie – Géopolitique 2025</title>
+  <title>Asie – Géopolitique 2025</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,22 +19,77 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
+
   <main>
-    <section>
-      <h2>Enjeux géopolitiques en Asie (2025)</h2>
+    <!-- Bannière illustrée pour l’Asie -->
+    <section class="hero" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Map_of_Asia.svg/960px-Map_of_Asia.svg.png');">
+      <h2>L’Asie en 2025 : entre croissance et rivalités</h2>
+    </section>
+
+    <section class="article">
+      <!-- Illustration supplémentaire pour l’Asie -->
+      <figure>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/The_port_of_Singapore.jpg/1024px-The_port_of_Singapore.jpg" alt="Le port de Singapour, l’un des principaux hubs de transbordement en Asie">
+        <figcaption>Port de Singapour – Wikimedia Commons (CC BY‑SA 2.0)【747374551386660†L169-L205】</figcaption>
+      </figure>
+      <h3>Un moteur pour la croissance mondiale</h3>
       <p>
-        L’Asie est au cœur de la croissance mondiale et des nouvelles dynamiques commerciales, mais l’incertitude géopolitique et les rivalités régionales rendent l’avenir complexe.
+        L’Asie continue de tirer la croissance planétaire. Plus de la moitié de
+        l’expansion économique mondiale proviendra de la région, et la majorité
+        des ménages de classe moyenne y résident【939865551988315†L72-L85】. Cette
+        montée en puissance s’accompagne d’une urbanisation rapide, d’une
+        industrialisation soutenue et d’une croissance du commerce intra‑asiatique.
+        Les gouvernements investissent massivement dans les infrastructures,
+        l’éducation et la technologie pour maintenir ce rythme, tout en cherchant
+        à réduire les disparités entre les pays et au sein des sociétés.
       </p>
-      <ul>
-        <li><strong>Moteur de l’économie mondiale</strong> : la région fournit plus de la moitié de la croissance planétaire et abrite la majorité des ménages de classe moyenne【835551676607622†L68-L81】.</li>
-        <li><strong>Nouveaux corridors commerciaux</strong> : des routes comme Inde–Japon et Inde–Moyen‑Orient se développent, diversifiant les chaînes d’approvisionnement et stimulant l’intégration régionale【835551676607622†L89-L118】.</li>
-        <li><strong>Incertitude politique et commerciale</strong> : les tensions géopolitiques, les régulations technologiques et les rivalités sino-américaines obligent les entreprises à rester vigilantes【835551676607622†L44-L60】.</li>
-      </ul>
-      <p>Les pays asiatiques devront concilier croissance et stabilité en renforçant leurs institutions, en approfondissant l’intégration régionale et en gérant les risques géopolitiques.</p>
+
+      <h3>Nouveaux corridors et intégration</h3>
+      <p>
+        La géopolitique du commerce est en pleine mutation. De nouveaux
+        corridors émergent, notamment entre l’Inde et le Japon ou entre l’Inde et
+        le Moyen‑Orient, diversifiant les chaînes d’approvisionnement et
+        remettant en question la domination des anciennes routes maritimes【939865551988315†L96-L124】. Les
+        projets de connectivité comme l’initiative de couloir économique
+        Inde‑Moyen‑Orient‑Europe créent de nouvelles opportunités logistiques et
+        renforcent l’intégration régionale. Dans le même temps, les accords de
+        libre‑échange intra‑asiatiques se multiplient, favorisant le commerce et
+        les investissements transfrontaliers.
+      </p>
+
+      <h3>Incertitudes géopolitiques et technologiques</h3>
+      <p>
+        Derriere ces perspectives favorables se cachent des tensions croissantes.
+        Les relations sino‑américaines restent tendues : restrictions
+        technologiques, droits de douane et rivalités pour les chaînes de
+        semi‑conducteurs perturbent les entreprises【939865551988315†L48-L63】. Les
+        différends territoriaux en mer de Chine méridionale, les risques de
+        conflit autour de Taïwan et les courses aux armements dans la région
+        obligent les dirigeants à accorder une attention particulière à la
+        diplomatie et à la sécurité. Les entreprises doivent désormais intégrer
+        ces risques géopolitiques dans leurs stratégies, en diversifiant leurs
+        marchés et en renforçant la résilience de leurs chaînes d’approvisionnement.
+      </p>
+
+      <p>
+        L’Asie façonnera plus que jamais l’ordre international. Pour que la
+        croissance reste inclusive et durable, les gouvernements devront assurer
+        la cohésion sociale, investir dans la transition énergétique et gérer
+        prudemment les rivalités stratégiques.
+      </p>
+
+      <p class="source">
+        Image : Carte politique de l’Asie – Wikimedia Commons, CC BY‑SA 4.0
+      </p>
+      <p class="source">
+        Sources : [1] McKinsey – « Trade, Tech and Geopolitics: Asia in 2025 »【939865551988315†L72-L85】【939865551988315†L96-L124】;
+        [2] McKinsey – « Trade, Tech and Geopolitics: Asia in 2025 »【939865551988315†L48-L63】.
+      </p>
     </section>
   </main>
+
   <footer id="contact">
-    <p>Site créé par Amadou Touré.</p>
+    <p>Site créé par Amadou Touré.</p>
     <p>Contact : <a href="mailto:example@example.com">example@example.com</a></p>
   </footer>
 </body>
