Mise à jour de europe.html : ajout d'images et article détaillé

--- a/europe.html
+++ b/europe.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Europe – Géopolitique 2025</title>
+  <title>Europe – Géopolitique 2025</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,22 +19,91 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
+
   <main>
-    <section>
-      <h2>Enjeux géopolitiques en Europe (2025)</h2>
+    <!-- Bannière illustrée pour l’Europe -->
+    <section class="hero" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Political_Map_of_Europe-en.svg/960px-Political_Map_of_Europe-en.svg.png');">
+      <h2>L’Europe en 2025 : défis internes et ordre mondial</h2>
+    </section>
+
+    <section class="article">
+      <!-- Illustration supplémentaire pour l’Europe -->
+      <figure>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/War_in_Ukraine_(33258793696).jpg/800px-War_in_Ukraine_(33258793696).jpg" alt="Une scène du conflit en Ukraine qui marque la géopolitique européenne">
+        <figcaption>Conflit en Ukraine – Wikimedia Commons (CC BY‑SA 2.0)【434205253376021†L166-L190】</figcaption>
+      </figure>
+      <h3>Fragmentation politique et fragilité économique</h3>
       <p>
-        Le Vieux Continent aborde une période délicate caractérisée par des fragilités internes et des pressions extérieures. Trois tendances se détachent.
+        L’année 2025 s’annonce comme l’une des plus périlleuses pour l’Union
+        européenne. La fragmentation politique, l’essoufflement économique et
+        l’instabilité sociale fragilisent la cohésion du continent【20401116098601†L59-L70】. En
+        France, en Allemagne et au Royaume‑Uni, des crises politiques
+        paralysent les gouvernements et limitent leur capacité à agir【20401116098601†L63-L67】.
+        La montée des mouvements populistes et l’érosion du consensus sur
+        l’intégration européenne exacerbent ces tensions.
       </p>
-      <ul>
-        <li><strong>Cohésion politique fragilisée</strong> : l’Europe traverse une crise de confiance marquée par l’éclatement des coalitions et la montée des mouvements contestataires en France, en Allemagne et au Royaume‑Uni【20401116098601†L59-L70】【20401116098601†L63-L67】.</li>
-        <li><strong>Guerre et sécurité</strong> : la guerre en Ukraine et les tensions au Moyen‑Orient exercent une forte pression sur les ressources et la solidarité européenne, tout en provoquant une crise énergétique et migratoire【20401116098601†L72-L79】.</li>
-        <li><strong>Relations transatlantiques</strong> : un éventuel retour de Donald Trump à la Maison‑Blanche pourrait fragiliser l’OTAN, réduire le soutien occidental à l’Ukraine et ouvrir une nouvelle vague de conflits commerciaux【20401116098601†L84-L117】.</li>
-      </ul>
-      <p>Les pays européens devront renforcer leur cohésion interne, diversifier leurs approvisionnements en énergie et maintenir un dialogue constructif avec leurs partenaires pour relever ces défis.</p>
+
+      <h3>Guerre en Ukraine et sécurité énergétique</h3>
+      <p>
+        L’invasion de l’Ukraine par la Russie en 2022 a bouleversé la stratégie
+        énergétique de l’Europe. Privée de gaz russe bon marché, l’UE a dû
+        réactiver des centrales à charbon et importer du gaz naturel liquéfié
+        pour éviter les pénuries, compromettant sa transition vers une énergie
+        propre【158871145048739†L1025-L1038】. Les infrastructures énergétiques
+        deviennent aussi des cibles privilégiées pour des cyberattaques, exposant
+        les réseaux électriques et gaziers à des risques majeurs【158871145048739†L1040-L1043】.
+        En parallèle, la guerre en Ukraine reste un foyer de tensions qui
+        retarde la reconstruction et déstabilise l’Est du continent【20401116098601†L72-L79】.
+      </p>
+
+      <h3>Crise climatique et cybersécurité</h3>
+      <p>
+        L’Europe n’échappe pas aux effets du réchauffement climatique. Les
+        inondations, les sécheresses et les canicules se multiplient, menaçant
+        l’agriculture, les infrastructures et la santé publique. La lutte contre
+        le changement climatique est l’un des principaux risques géopolitiques de
+        2025【158871145048739†L1051-L1093】. Parallèlement, la multiplication des
+        cyberattaques contre les institutions européennes et les entreprises
+        critiques met en lumière la fragilité numérique du continent【158871145048739†L1141-L1161】.
+        Ces menaces obligent les États membres à renforcer leur coopération en
+        matière de cybersécurité tout en accélérant la transition énergétique.
+      </p>
+
+      <h3>Relations transatlantiques et diversification</h3>
+      <p>
+        Les relations avec les États‑Unis entrent dans une nouvelle phase. Le
+        retour de Donald Trump à la présidence suscite des incertitudes quant à
+        l’engagement américain en faveur de l’OTAN et du soutien à l’Ukraine【20401116098601†L84-L117】.
+        Face à cette instabilité, l’UE cherche à renforcer sa défense et à
+        diversifier ses partenariats commerciaux. En janvier 2025, elle a
+        conclu un accord commercial modernisé avec le Mexique et finalisé un
+        accord vieux de vingt‑cinq ans avec le Mercosur, tout en accélérant ses
+        négociations avec l’Inde, l’Indonésie et les Philippines【32182282875184†L67-L74】. Les
+        Européens plaident aussi pour un État providence plus fort afin de
+        garantir la cohésion sociale et la légitimité démocratique【32182282875184†L77-L83】.
+      </p>
+
+      <p>
+        Au croisement de ces tendances, l’Europe doit repenser son modèle
+        géopolitique. Cela implique de bâtir une autonomie stratégique, de
+        renforcer l’intégration interne et de s’engager dans un leadership
+        mondial sur le climat et le développement.
+      </p>
+
+      <p class="source">
+        Image : Carte politique de l’Europe – Wikimedia Commons, CC BY‑SA 4.0
+      </p>
+      <p class="source">
+        Sources : [1] Bertelsmann Stiftung – « Major Events and Trends Shaping
+        Europe and the World in 2025 »【20401116098601†L59-L70】【20401116098601†L63-L67】【20401116098601†L72-L79】【20401116098601†L84-L117】;
+        [2] S&P Global – « Top Geopolitical Risks of 2025 »【158871145048739†L1025-L1038】【158871145048739†L1040-L1043】【158871145048739†L1051-L1093】【158871145048739†L1141-L1161】;
+        [3] Social Europe – « The End of Certainty: A New Geopolitical Era Begins in 2025 »【32182282875184†L67-L83】.
+      </p>
     </section>
   </main>
+
   <footer id="contact">
-    <p>Site créé par Amadou Touré.</p>
+    <p>Site créé par Amadou Touré.</p>
     <p>Contact : <a href="mailto:example@example.com">example@example.com</a></p>
   </footer>
 </body>
