Mise à jour de moyen-orient.html : ajout d'images et article détaillé

--- a/moyen-orient.html
+++ b/moyen-orient.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Moyen‑Orient – Géopolitique 2025</title>
+  <title>Moyen‑Orient – Géopolitique 2025</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,23 +19,108 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
+
   <main>
-    <section>
-      <h2>Enjeux géopolitiques au Moyen‑Orient (2025)</h2>
+    <!-- Hero image for the Middle East -->
+    <section class="hero" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/1/13/Middle_east.jpg');">
+      <h2>Le Moyen‑Orient en 2025 : modernisation, conflits et incertitudes</h2>
+    </section>
+
+    <section class="article">
+      <!-- Illustration supplémentaire pour le Moyen‑Orient -->
+      <figure>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Doha%2C_Qatar%2C_Middle_East.jpg/1024px-Doha%2C_Qatar%2C_Middle_East.jpg" alt="Skyline moderne de Doha mettant en lumière la modernisation du Golfe">
+        <figcaption>Skyline de Doha – Wikimedia Commons (CC BY‑SA 4.0)【356454064235400†L165-L200】</figcaption>
+      </figure>
+      <h3>Modernisation et disparités</h3>
       <p>
-        La région reste marquée par des contrastes entre modernisation rapide et crises persistantes. Plusieurs tendances structurent l’agenda politique et sécuritaire.
+        Les États du Golfe — Arabie saoudite, Émirats arabes unis et Qatar —
+        investissent massivement dans l’intelligence artificielle, l’hydrogène
+        vert et l’énergie solaire pour préparer l’après‑pétrole【242691304094468†L88-L139】【242691304094468†L141-L147】.
+        Cette modernisation contraste avec la situation de nombreux pays voisins
+        où les taux de chômage élevés, la corruption et la mauvaise gouvernance
+        alimentent le mécontentement populaire. Les disparités sociales et
+        économiques se creusent entre les métropoles futuristes du Golfe et les
+        sociétés en crise de l’Égypte, de l’Irak ou du Yémen.
       </p>
-      <ul>
-        <li><strong>Instabilité chronique</strong> : malgré des avancées technologiques et économiques dans les États du Golfe, le Moyen‑Orient demeure miné par les conflits, le chômage et la corruption【242691304094468†L88-L139】.</li>
-        <li><strong>Économie duale</strong> : les pays du Golfe investissent massivement dans l’IA, l’hydrogène et le tourisme, tandis que des États comme l’Irak, la Syrie et le Liban souffrent d’effondrement économique et de gouvernance défaillante【242691304094468†L141-L147】.</li>
-        <li><strong>Changement d’équilibre des forces</strong> : l’affaiblissement de l’Iran, la destruction des réseaux de Hamas et du Hezbollah et le recul du régime syrien renforcent la position d’Israël et rebattent les cartes du pouvoir régional【242691304094468†L150-L156】.</li>
-        <li><strong>Jeu des puissances</strong> : bien que les États‑Unis restent un acteur clé, des pays comme la Turquie, l’Arabie saoudite et les Émirats arabes unis affirment davantage leur autonomie, tandis que la Russie et la Chine gagnent du terrain【242691304094468†L150-L174】.</li>
-      </ul>
-      <p>Pour stabiliser la région, il sera crucial de promouvoir la gouvernance inclusive, de diversifier les économies et de gérer les rivalités entre puissances avec des stratégies de coopération plutôt que de confrontation.</p>
+
+      <h3>Nouvel équilibre des pouvoirs</h3>
+      <p>
+        Le rapport de force régional évolue profondément. L’affaiblissement de
+        l’Iran, dont les alliés Hamas et Hezbollah ont été décimés, ainsi que la
+        chute du régime de Bachar al‑Assad en Syrie, ont réduit l’influence de
+        Téhéran et de son « axe de la résistance »【242691304094468†L150-L156】. Dans ce
+        contexte, Israël voit sa position militaire se renforcer et bénéficie
+        d’un soutien tacite des États du Golfe et de la Turquie, qui cherchent à
+        contenir l’Iran【242691304094468†L150-L174】. La prédominance américaine
+        demeure, mais des acteurs comme l’Arabie saoudite, les Émirats et la
+        Turquie multiplient les initiatives diplomatiques et sécuritaires pour
+        peser davantage.
+      </p>
+
+      <h3>Conflits en cours et droit international</h3>
+      <p>
+        En 2025, la région reste minée par les guerres. Israël poursuit son
+        offensive à Gaza et mène des opérations dans le sud du Liban et en
+        Syrie, au mépris des négociations de cessez‑le‑feu【818396601507620†L105-L128】. La
+        chute de Damas a ouvert un vide politique que des groupes islamistes
+        tentent de combler, tandis que les attaques des Houthis perturbent la
+        navigation en mer Rouge【818396601507620†L105-L128】. L’érosion du droit
+        international est flagrante : les puissances occidentales continuent de
+        soutenir Israël malgré les violations des droits humains, affaiblissant
+        la confiance dans les normes multilatérales【818396601507620†L119-L127】.
+      </p>
+
+      <h3>Options iraniennes : diplomatie ou escalade</h3>
+      <p>
+        Après la débâcle du régime syrien et la destruction de ses capacités
+        balistiques, l’Iran doit réévaluer sa stratégie. Téhéran pourrait
+        renouer avec une version négociée de l’accord sur le nucléaire (JCPOA)
+        ou accélérer son programme pour se doter d’une capacité d’attaque
+        nucléaire【818396601507620†L134-L160】. La seconde option risquerait de
+        provoquer une frappe préventive des États‑Unis et d’Israël avant même que
+        l’Iran n’atteigne la parité nucléaire. Selon les experts, la voie
+        diplomatique reste la moins périlleuse, mais l’arrivée de Donald Trump
+        au pouvoir réduit la probabilité d’un engagement constructif【818396601507620†L168-L177】.
+      </p>
+
+      <h3>Authoritarisme et mouvements populaires</h3>
+      <p>
+        La chute de Bachar al‑Assad représente un moment historique pour les
+        militants de la région. Les exilés syriens rentrent chez eux pour
+        célébrer la fin d’un demi‑siècle d’oppression et réclamer des comptes【818396601507620†L185-L190】. Pourtant,
+        cette lueur d’espoir s’accompagne d’un durcissement autoritaire dans
+        d’autres pays. Les régimes se renforcent grâce à la surveillance et à
+        l’appui de puissances extérieures, tandis que les élites profitent de la
+        complaisance américaine pour réprimer les oppositions【818396601507620†L201-L218】. La
+        résilience des mouvements citoyens, illustrée par la mobilisation en
+        Syrie, montre cependant que la volonté de changement persiste malgré la
+        brutalité de l’environnement.
+      </p>
+
+      <p>
+        Le Moyen‑Orient aborde 2025 dans une configuration inédite. Alors que
+        l’innovation et l’intégration régionale offrent des perspectives
+        prometteuses, les conflits, l’authoritarisme et les rivalités géopolitiques
+        continueront d’alimenter l’instabilité. La paix durable dépendra de la
+        capacité des acteurs locaux et internationaux à faire prévaloir le droit
+        et à dialoguer au‑delà des clivages.
+      </p>
+
+      <p class="source">
+        Image : Carte politique du Moyen‑Orient – Wikimedia Commons, domaine public
+      </p>
+      <p class="source">
+        Sources : [1] Fair Observer – « The Middle East 2025: The Good, the Bad
+        and the Tragically Ugly »【242691304094468†L88-L139】【242691304094468†L141-L147】【242691304094468†L150-L156】【242691304094468†L150-L174】;
+        [2] Arab Center Washington DC – « How Will 2025 Be Different in the
+        Middle East? »【818396601507620†L105-L128】【818396601507620†L134-L160】【818396601507620†L168-L177】【818396601507620†L185-L218】.
+      </p>
     </section>
   </main>
+
   <footer id="contact">
-    <p>Site créé par Amadou Touré.</p>
+    <p>Site créé par Amadou Touré.</p>
     <p>Contact : <a href="mailto:example@example.com">example@example.com</a></p>
   </footer>
 </body>
