Supprimer les identifiants de citation et clarifier les sources (Afrique)

--- a/afrique.html
+++ b/afrique.html
@@ -30,7 +30,7 @@
     <section class="article">
       <figure>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Nairobi_City_Skyline.jpg/1024px-Nairobi_City_Skyline.jpg" alt="Skyline de Nairobi, capitale économique de l’Afrique de l’Est">
-        <figcaption>Skyline de Nairobi – Wikimedia Commons (CC BY‑SA 3.0)【843465029447635†L170-L204】</figcaption>
+        <figcaption>Skyline de Nairobi – Wikimedia Commons (CC BY‑SA 3.0)</figcaption>
       </figure>
 
       <!-- Article détaillé sur l’Afrique -->
@@ -43,7 +43,7 @@
         confiance envers les gouvernements civils s’érode. Plusieurs élections
         clés auront lieu au Cameroun, en Côte d’Ivoire, en Tanzanie et au
         Gabon, mais peu d’observateurs s’attendent à un renouveau démocratique
-        profond【565369443370232†L107-L125】【565369443370232†L148-L161】. Les
+        profond. Les
         institutions sont fragiles et beaucoup redoutent des scrutins contestés
         sans alternance ni amélioration des libertés.
       </p>
@@ -52,12 +52,12 @@
       <p>
         La sécurité demeure la principale préoccupation. Dans le Sahel et la
         Corne de l’Afrique, le jihadisme gagne du terrain et menace de
-        déstabiliser des États déjà fragiles【565369443370232†L121-L125】. Des
+        destabiliser des États déjà fragiles. Des
         tensions séparatistes couvent au Cameroun, en Éthiopie, au Nigeria et au
         Mali, tandis que des groupes armés profitent du manque de services
         publics et de la corruption pour s’implanter. La dégradation du climat
         sécuritaire freine les investissements et pousse de nombreuses
-        personnes à migrer vers des zones plus sûrs.
+        personnes à migrer vers des zones plus sûres.
       </p>
 
       <h3>Jeu des puissances</h3>
@@ -65,7 +65,7 @@
         Sur le plan international, l’influence occidentale recule. La politique
         isolationniste de Washington laisse un vide que la Chine et la Russie
         s’empressent de combler, qu’il s’agisse d’investissements, de ventes
-        d’armes ou de coopération technologique【565369443370232†L127-L131】.
+        d’armes ou de coopération technologique.
         L’intégration régionale progresse difficilement : les coups d’État et
         les suspensions de certains États au sein de la Communauté économique
         des États d’Afrique de l’Ouest (CEDEAO) entravent la libre
@@ -86,9 +86,7 @@
         Image : Carte politique de l’Afrique – Wikimedia Commons, CC BY‑SA 4.0
       </p>
       <p class="source">
-        Sources : [1] GIGA – « Ten Things to Watch in Africa in 2025 »【565369443370232†L107-L125】【565369443370232†L148-L161】;
-        [2] GIGA – « Ten Things to Watch in Africa in 2025 »【565369443370232†L121-L125】;
-        [3] GIGA – « Ten Things to Watch in Africa in 2025 »【565369443370232†L127-L131】.
+        Source : GIGA – « Ten Things to Watch in Africa in 2025 ».
       </p>
     </section>
   </main>
