--- a/ameriques.html
+++ b/ameriques.html
@@ -30,7 +30,7 @@
       <!-- Illustration supplémentaire pour les Amériques -->
       <figure>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Panama_canal_panoramic.jpg/1280px-Panama_canal_panoramic.jpg" alt="Vue panoramique du canal de Panama et du pont des Amériques">
-        <figcaption>Canal de Panama depuis le monument chinois – Wikimedia Commons (CC BY‑SA 4.0)【285895241962800†L169-L189】</figcaption>
+        <figcaption>Canal de Panama depuis le monument chinois – Wikimedia Commons (CC BY‑SA 4.0)</figcaption>
       </figure>
       <h3>Perspectives politiques et commerciales</h3>
       <p>
@@ -39,7 +39,7 @@
         anti‑immigration promettent de raviver les tensions avec les voisins du
         Sud. Les accords de libre‑échange conclus ces dernières années pourraient
         être remis en question, créant de l’incertitude pour les exportateurs et
-        les travailleurs migrants【271091484423489†L141-L154】. Les négociations
+        les travailleurs migrants. Les négociations
         commerciales avec l’Union européenne et l’Asie pourraient, elles,
         s’intensifier en réponse à ces restrictions.
       </p>
@@ -51,7 +51,7 @@
         perturbent les élections et les campagnes politiques. Le réchauffement
         assèche le canal de Panama et contraint à détourner une partie du trafic
         par le détroit de Magellan, ce qui ralentit les chaînes
-        d’approvisionnement et renchérit les coûts de transport【271091484423489†L141-L154】.
+        d’approvisionnement et renchérit les coûts de transport.
         Les récoltes en Argentine et au Brésil sont également menacées par des
         sécheresses sévères, ce qui pourrait affaiblir la sécurité
         alimentaire régionale.
@@ -62,7 +62,7 @@
         Les organisations criminelles latino‑américaines évoluent rapidement en
         diversifiant leurs revenus et en s’immisçant dans la vie politique. Cette
         mutation complique la lutte contre la corruption et la violence
-        organisée【271091484423489†L148-L153】. En parallèle, la chute des taux de
+        organisée. En parallèle, la chute des taux de
         natalité met les systèmes de retraite sous pression et annonce une
         pénurie de main‑d’œuvre dans plusieurs pays, menaçant leur potentiel de
         croissance à long terme.
@@ -72,12 +72,12 @@
       <p>
         Après une période de forte inflation, la région connaît une accalmie : la
         hausse des prix ralentit, le chômage recule et la pauvreté diminue
-        progressivement【271091484423489†L155-L165】. En Argentine, le président
+        progressivement. En Argentine, le président
         Javier Milei mène des réformes économiques radicales visant à stabiliser
         la monnaie et à relancer l’investissement. Si elles réussissent, elles
         pourraient servir de modèle à d’autres pays. Globalement, les
         prévisions tablent sur une croissance du PIB régional d’environ 2,5 %, un
-        rythme modeste mais supérieur aux années précédentes【271091484423489†L155-L165】.
+        rythme modeste mais supérieur aux années précédentes.
       </p>
 
       <p>
@@ -92,10 +92,7 @@
         CC BY‑SA 3.0
       </p>
       <p class="source">
-        Sources : [1] Americas Quarterly – « Four Trends That Will Define Latin
-        America in 2025 »【271091484423489†L141-L154】【271091484423489†L148-L153】;
-        [2] Americas Quarterly – « Four Trends That Will Define Latin America in
-        2025 »【271091484423489†L155-L165】.
+        Source : Americas Quarterly – « Four Trends That Will Define Latin America in 2025 ».
       </p>
     </section>
   </main>
