Supprimer les identifiants de citation et clarifier les sources (Asie)

--- a/asie.html
+++ b/asie.html
@@ -30,13 +30,13 @@
       <!-- Illustration supplémentaire pour l’Asie -->
       <figure>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/The_port_of_Singapore.jpg/1024px-The_port_of_Singapore.jpg" alt="Le port de Singapour, l’un des principaux hubs de transbordement en Asie">
-        <figcaption>Port de Singapour – Wikimedia Commons (CC BY‑SA 2.0)【747374551386660†L169-L205】</figcaption>
+        <figcaption>Port de Singapour – Wikimedia Commons (CC BY‑SA 2.0)</figcaption>
       </figure>
       <h3>Un moteur pour la croissance mondiale</h3>
       <p>
         L’Asie continue de tirer la croissance planétaire. Plus de la moitié de
         l’expansion économique mondiale proviendra de la région, et la majorité
-        des ménages de classe moyenne y résident【939865551988315†L72-L85】. Cette
+        des ménages de classe moyenne y résident. Cette
         montée en puissance s’accompagne d’une urbanisation rapide, d’une
         industrialisation soutenue et d’une croissance du commerce intra‑asiatique.
         Les gouvernements investissent massivement dans les infrastructures,
@@ -49,7 +49,7 @@
         La géopolitique du commerce est en pleine mutation. De nouveaux
         corridors émergent, notamment entre l’Inde et le Japon ou entre l’Inde et
         le Moyen‑Orient, diversifiant les chaînes d’approvisionnement et
-        remettant en question la domination des anciennes routes maritimes【939865551988315†L96-L124】. Les
+        remettant en question la domination des anciennes routes maritimes. Les
         projets de connectivité comme l’initiative de couloir économique
         Inde‑Moyen‑Orient‑Europe créent de nouvelles opportunités logistiques et
         renforcent l’intégration régionale. Dans le même temps, les accords de
@@ -62,7 +62,7 @@
         Derriere ces perspectives favorables se cachent des tensions croissantes.
         Les relations sino‑américaines restent tendues : restrictions
         technologiques, droits de douane et rivalités pour les chaînes de
-        semi‑conducteurs perturbent les entreprises【939865551988315†L48-L63】. Les
+        semi‑conducteurs perturbent les entreprises. Les
         différends territoriaux en mer de Chine méridionale, les risques de
         conflit autour de Taïwan et les courses aux armements dans la région
         obligent les dirigeants à accorder une attention particulière à la
@@ -82,8 +82,7 @@
         Image : Carte politique de l’Asie – Wikimedia Commons, CC BY‑SA 4.0
       </p>
       <p class="source">
-        Sources : [1] McKinsey – « Trade, Tech and Geopolitics: Asia in 2025 »【939865551988315†L72-L85】【939865551988315†L96-L124】;
-        [2] McKinsey – « Trade, Tech and Geopolitics: Asia in 2025 »【939865551988315†L48-L63】.
+        Source : McKinsey – « Trade, Tech and Geopolitics: Asia in 2025 ».
       </p>
     </section>
   </main>
